appns_a.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: appns-a
spec: {}
status: {}
