appns_b.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: appns-b
  labels:
    name: appns-b
spec: {}
status: {}
