app_a_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  namespace: appns-a
spec:
  selector:
    app: app-a
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80     
      nodePort: 30001    
  type: NodePort
