app_b_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
  namespace: appns-b
spec:
  selector:
    app: app-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
