newtork_policy_deny_to_from_appns_a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic-to-from-appns-a
  namespace: appns-b
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: appns-a
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: appns-a
